--- a/Metronome-Swift/Base.lproj/Main.storyboard
+++ b/Metronome-Swift/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -138,7 +139,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Groups" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUT-CV-fML">
-                                <rect key="frame" x="95.5" y="80" width="184" height="34"/>
+                                <rect key="frame" x="0.0" y="80" width="375" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <color key="textColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -193,10 +194,9 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oz7-tn-rFv" customClass="BeatNumberButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="95" y="130" width="80" height="68"/>
+                                <rect key="frame" x="0.0" y="130" width="187.5" height="68"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="LRY-WH-1LG"/>
                                     <constraint firstAttribute="height" constant="68" id="uYL-mq-mAQ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="42"/>
@@ -204,52 +204,35 @@
                                     <color key="titleColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="selectTwoBeats:" destination="PgZ-xe-vib" eventType="touchUpInside" id="vJr-kU-9wE"/>
+                                    <action selector="pressedTimeButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="nqs-Od-fGo"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9fg-he-cHq" customClass="BeatNumberButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="199.5" y="130" width="80" height="68"/>
+                                <rect key="frame" x="188" y="130" width="187" height="68"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="68" id="0Ly-tA-Hka"/>
-                                    <constraint firstAttribute="width" constant="80" id="ZA6-W8-Zrf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="42"/>
                                 <state key="normal" title="3">
                                     <color key="titleColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="selectThreeBeats:" destination="PgZ-xe-vib" eventType="touchUpInside" id="ArB-oR-uef"/>
+                                    <action selector="pressedTimeButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="BMm-X7-daP"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tsQ-oQ-bTJ" customClass="BeatNumberButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="95" y="215" width="80" height="68"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tsQ-oQ-bTJ" customClass="BeatNumberButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="0.5" y="198" width="187.5" height="68"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="68" id="ECS-hG-8Da"/>
-                                    <constraint firstAttribute="width" constant="80" id="UPn-8P-OOM"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="42"/>
                                 <state key="normal" title="4">
                                     <color key="titleColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="selectFourBeats:" destination="PgZ-xe-vib" eventType="touchUpInside" id="O9Y-ZS-55C"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aHx-ua-1pc" customClass="BeatNumberButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="199" y="215" width="80" height="68"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="D70-LI-gFS"/>
-                                    <constraint firstAttribute="height" constant="68" id="Z9l-W7-vw0"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="42"/>
-                                <state key="normal" title="6">
-                                    <color key="titleColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="selectSixBeats:" destination="PgZ-xe-vib" eventType="touchUpInside" id="Bpb-2j-dgX"/>
+                                    <action selector="pressedTimeButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="SLY-9o-MSZ"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Colour" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBW-fx-p83">
@@ -258,17 +241,33 @@
                                 <color key="textColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aHx-ua-1pc" customClass="BeatNumberButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="188" y="198" width="187" height="68"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="68" id="Z9l-W7-vw0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="42"/>
+                                <state key="normal" title="6">
+                                    <color key="titleColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="pressedTimeButton:" destination="PgZ-xe-vib" eventType="touchUpInside" id="xSD-fi-o7D"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.26098805144384779" blue="0.54550781250000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Oz7-tn-rFv" firstAttribute="width" secondItem="dDn-N8-zP2" secondAttribute="width" multiplier="0.5" id="1wc-wd-zcb"/>
                             <constraint firstItem="w5v-ho-d7T" firstAttribute="leading" secondItem="gpB-nD-3cn" secondAttribute="trailing" constant="-14" id="2ru-eT-PmR"/>
-                            <constraint firstItem="aHx-ua-1pc" firstAttribute="top" secondItem="9fg-he-cHq" secondAttribute="bottom" constant="24" id="4fS-q7-8cc"/>
-                            <constraint firstItem="9fg-he-cHq" firstAttribute="leading" secondItem="Oz7-tn-rFv" secondAttribute="trailing" constant="24" id="9lb-ag-uJv"/>
+                            <constraint firstItem="tsQ-oQ-bTJ" firstAttribute="top" secondItem="Oz7-tn-rFv" secondAttribute="bottom" id="3cy-xz-XM7"/>
+                            <constraint firstItem="tsQ-oQ-bTJ" firstAttribute="width" secondItem="Oz7-tn-rFv" secondAttribute="width" id="7tb-JF-rvw"/>
                             <constraint firstItem="3gv-uz-FB6" firstAttribute="centerY" secondItem="n0a-Ad-STu" secondAttribute="centerY" id="BfK-tz-NSS"/>
                             <constraint firstItem="aYl-cm-0CC" firstAttribute="centerX" secondItem="dDn-N8-zP2" secondAttribute="centerX" id="CD6-kv-11x"/>
                             <constraint firstItem="gpB-nD-3cn" firstAttribute="leading" secondItem="aYl-cm-0CC" secondAttribute="trailing" constant="16" id="EBp-3X-TrA"/>
                             <constraint firstItem="w5v-ho-d7T" firstAttribute="centerY" secondItem="H5j-vI-4H3" secondAttribute="centerY" id="EF4-pg-Z0Q"/>
                             <constraint firstItem="aYl-cm-0CC" firstAttribute="leading" secondItem="MTQ-dj-CCx" secondAttribute="trailing" constant="16" id="HYU-go-hdq"/>
+                            <constraint firstItem="9fg-he-cHq" firstAttribute="width" secondItem="Oz7-tn-rFv" secondAttribute="width" id="IXZ-8V-xWt"/>
                             <constraint firstItem="Oz7-tn-rFv" firstAttribute="leading" secondItem="vUT-CV-fML" secondAttribute="leading" id="Ibp-Kb-qsP"/>
                             <constraint firstItem="gpB-nD-3cn" firstAttribute="centerY" secondItem="aYl-cm-0CC" secondAttribute="centerY" id="PPp-ti-MZN"/>
                             <constraint firstItem="H5j-vI-4H3" firstAttribute="centerY" secondItem="n0a-Ad-STu" secondAttribute="centerY" id="QID-1G-ScZ"/>
@@ -277,15 +276,18 @@
                             <constraint firstItem="7KZ-gf-eDx" firstAttribute="top" secondItem="aYl-cm-0CC" secondAttribute="bottom" constant="32" id="SHd-ha-teb"/>
                             <constraint firstItem="Oz7-tn-rFv" firstAttribute="top" secondItem="vUT-CV-fML" secondAttribute="bottom" constant="16" id="TaF-m9-Hwv"/>
                             <constraint firstItem="9fg-he-cHq" firstAttribute="centerY" secondItem="Oz7-tn-rFv" secondAttribute="centerY" id="VES-4c-S1x"/>
-                            <constraint firstItem="aHx-ua-1pc" firstAttribute="leading" secondItem="tsQ-oQ-bTJ" secondAttribute="trailing" constant="24" id="Wd4-Vg-TKA"/>
                             <constraint firstItem="3gv-uz-FB6" firstAttribute="top" secondItem="GBW-fx-p83" secondAttribute="bottom" constant="16" id="Zgv-Xu-Ibv"/>
+                            <constraint firstItem="tsQ-oQ-bTJ" firstAttribute="centerX" secondItem="Oz7-tn-rFv" secondAttribute="centerX" id="Zyu-Gj-93e"/>
+                            <constraint firstItem="aHx-ua-1pc" firstAttribute="width" secondItem="9fg-he-cHq" secondAttribute="width" id="aAF-gI-AGF"/>
                             <constraint firstItem="MTQ-dj-CCx" firstAttribute="centerY" secondItem="aYl-cm-0CC" secondAttribute="centerY" id="aaA-03-nMt"/>
                             <constraint firstItem="tsQ-oQ-bTJ" firstAttribute="centerY" secondItem="aHx-ua-1pc" secondAttribute="centerY" id="em9-3e-BhV"/>
+                            <constraint firstItem="Oz7-tn-rFv" firstAttribute="leading" secondItem="dDn-N8-zP2" secondAttribute="leading" id="i5f-Gb-XHO"/>
                             <constraint firstItem="Oz7-tn-rFv" firstAttribute="leading" secondItem="vUT-CV-fML" secondAttribute="leading" id="ntd-7F-TZu"/>
                             <constraint firstItem="H5j-vI-4H3" firstAttribute="leading" secondItem="n0a-Ad-STu" secondAttribute="trailing" constant="16" id="nyF-CL-Bup"/>
                             <constraint firstItem="vUT-CV-fML" firstAttribute="centerX" secondItem="dDn-N8-zP2" secondAttribute="centerX" id="pim-Of-tXH"/>
                             <constraint firstItem="aHx-ua-1pc" firstAttribute="centerX" secondItem="9fg-he-cHq" secondAttribute="centerX" id="tko-XO-pWM"/>
                             <constraint firstItem="GBW-fx-p83" firstAttribute="centerX" secondItem="dDn-N8-zP2" secondAttribute="centerX" id="vfT-Hu-iQ8"/>
+                            <constraint firstAttribute="trailing" secondItem="9fg-he-cHq" secondAttribute="trailing" id="x5b-Fs-h1X"/>
                             <constraint firstItem="9fg-he-cHq" firstAttribute="trailing" secondItem="vUT-CV-fML" secondAttribute="trailing" id="ySK-xx-c4v"/>
                             <constraint firstItem="aYl-cm-0CC" firstAttribute="top" secondItem="n0a-Ad-STu" secondAttribute="bottom" constant="18" id="z5f-9C-0nV"/>
                             <constraint firstItem="w5v-ho-d7T" firstAttribute="leading" secondItem="H5j-vI-4H3" secondAttribute="trailing" constant="16" id="zg0-lL-P6z"/>
